--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1850,7 +1850,7 @@ a {
   justify-content: center;
   border-radius: 100%;
   font-size: 32px;
-  background-color: #ffffff;
+  background-color: #edefeb;
   color: #fdae00;
   transition: all 0.3s ease-in-out;
 }
